syntax = "proto3";

package pb;

service UserService{
    rpc Check(UserRequest) returns (UserResponse){}
}

message UserRequest {
    string username = 1;
    string password = 2;
}

message UserResponse {
    bool result = 1;
    string err = 2;
}